[gd_scene load_steps=2 format=3 uid="uid://dkmlt5upsrwi8"]

[ext_resource type="Script" uid="uid://dt43ggxb8ikfw" path="res://scripts/UI.gd" id="1"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 53.0
offset_top = 16.0
offset_right = 114.0
offset_bottom = 39.0
text = "Score: 0"

[node name="MovesLabel" type="Label" parent="."]
offset_left = 53.0
offset_top = 44.0
offset_right = 121.0
offset_bottom = 67.0
text = "Moves: 0"

[node name="LevelLabel" type="Label" parent="."]
offset_left = 53.0
offset_top = 72.0
offset_right = 111.0
offset_bottom = 95.0
text = "Level: 1"

[node name="RestartButton" type="Button" parent="."]
offset_left = 53.0
offset_top = 108.0
offset_right = 118.0
offset_bottom = 139.0
text = "Restart"

[node name="HighScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -190.0
offset_top = 16.0
offset_right = -50.0
offset_bottom = 39.0
grow_horizontal = 0
text = "High Score: 0"
horizontal_alignment = 2

[node name="MaxLevelLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -190.0
offset_top = 44.0
offset_right = -50.0
offset_bottom = 67.0
grow_horizontal = 0
text = "Max Level: 1"
horizontal_alignment = 2
